# shopify-app-store-scraper

./: .gitignore  Makefile  README.md  pyproject.toml
app/: scrapy.cfg
app/services/: shopify_app_analyzer_service.py
app/shopify_app_store/: items.py  middlewares.py  pipelines.py  settings.py
app/shopify_app_store/spiders/: app_store.py
app/shopify_app_store_crawler/: items.py  pipelines.py  settings.py
app/shopify_app_store_crawler/spiders/: shopify_app_store_crawler.py
